# Kinnara

./: Cargo.toml
src/: device_utils.rs  host_type.rs  lib.rs  traits.rs  wgpu_utils.rs
src/bind_group/: mod.rs  naga_utils.rs  requirements.rs
src/preprocessing/: mod.rs  sampler_hint.rs  uniform_hint.rs  var_hint.rs
tests/: basic_compute.rs  compute_exeution.rs
tests/test_files/: basic_directives.glsl
