[package]
name = "kinnara"
version = "0.1.0"
edition = "2021"

[features]
default = ["glsl", "wgsl", "encase"]
glsl = ["wgpu/glsl"]
wgsl = ["wgpu/wgsl"]


[dependencies.encase]
version = "0.10.0"
optional = true

[dependencies.derive_more]
version = "1.0.0"
default-features = false
features = ["try_into", "from"]

[dependencies]
pollster = "0.3.0"
wgpu = { version = "22.1.0", features = ["naga-ir"] }
thiserror = "1.0.63"
struct-patch = "0.8.4"
nom = "7.1.3"
